	- refresh bsddb.
	- detect (and remove) dbenv files while upgrading to db-4.2.52.
	- ensure that librpmdb links against just built, not system, librpmio.
	- fix: dangling pointer brain fart (#107835).
	- fix: ds.Single() method needs malloc'd elements (#109919).
	- convert ja and ko man pages to utf8 (#106050).
	- man page corrections (#106415).
	- perl.req typo (#106672).

4.2 -> 4.2.1:
	- fix: nested %if handling, optind initialization posix vs. glibc.
	- add version check for package with provides and obsoletes.
	- hack out O_DIRECT support in db4 for now.
	- build with external beecrypt-3.0.0.
	- x86_64 -> athlon, ppc64[ip]series -> ppc64 arch compatibility.
	- treat missing epoch's exactly the same as Epoch: 0.
	- pass structure pointer, not args, through headerSprintf call chain.
	- add ":xml" header format modifier.
	- --queryformat '[%%{*:xml}\n]' to dump header content in XML.
	- add ".arch" suffix to erase colored packages with identical NEVR.
	- update ja man pages (#92261).
	- backport rpmsw stopwatch, insturment rpmts operations.
	- toy method to enable --stats through bindings.
	- fdCLose typo (#97257).
	- brp-python-bytecompile to automagically bytecode compile python.
	- update for fr.po (#97829).
	- don't attempt to remove dbenv on --rebuilddb.
	- autorelocate ix86 package file paths on ia64.
	- resurrect manifests, RPMRC_NOTFOUND returned by readLead().
	- python: missed tuple refcount in IDTXload/IDTXglob.
	- fix: IDTXglob should return REMOVETID sorted headers (#89857).
	- resolve elf32/elf64 file conflicts to prefer elf64.
	- apply debugedit patch necessary to produce kernel -debuginfo files.
	- ia64: autorelocate only colored, not every, file when installing.
	- repair find-debuginfo.sh to avoid recursing in /usr/lib/debug.
	- fix: ia64: don't attempt autorelocate on .src.rpm's.
	- fix: debuginfo: -not -path /usr/lib/debug needed -prune too.
	- fix: packages w/o file colors segfault.
	- add amd64 as alias for x86_64 (#99553).