@@ -10,6 +10,10 @@
 	- convert ja and ko man pages to utf8 (#106050).
 	- man page corrections (#106415).
 	- perl.req typo (#106672).
+	- fix: wrong package count for trigger scriptlet 1st arg (#100509).
+	- fix: don't break header SHA1 if non-existent user/group (#97727).
+	- remove fuids/fgids from rpmfi, easier to lookup fuser/fgroup instead.
+	- merge sensible parts of openpkg rpm.patch.bugfix (#104780).
 
 4.2 -> 4.2.1:
 	- fix: nested %if handling, optind initialization posix vs. glibc.
